单元测试通过

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.apache.kafka:kafka_2.12:2.3.0'
     implementation 'org.apache.kafka:connect-runtime:2.3.0'
     implementation 'org.apache.kafka:connect-api:2.3.0'
     implementation 'org.apache.kafka:connect-json:2.3.0'
